err/briareus.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Briareus'...
Listing './lib/python3.5/site-packages/Briareus/Cloud'...
Compiling './lib/python3.5/site-packages/Briareus/Cloud/worker.py'...
***   File "./lib/python3.5/site-packages/Briareus/Cloud/worker.py", line 19
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Briareus/Face'...
Compiling './lib/python3.5/site-packages/Briareus/Face/unparse.py'...
***   File "./lib/python3.5/site-packages/Briareus/Face/unparse.py", line 590
    print 'Testing %s' % fullname
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Briareus/Lazy'...
Compiling './lib/python3.5/site-packages/Briareus/Lazy/data.py'...
***   File "./lib/python3.5/site-packages/Briareus/Lazy/data.py", line 70
    print r.routineDeps
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Briareus/Parallel'...
Compiling './lib/python3.5/site-packages/Briareus/Parallel/utils.py'...
***   File "./lib/python3.5/site-packages/Briareus/Parallel/utils.py", line 42
    print product(range(10))
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Briareus/config.py'...
***   File "./lib/python3.5/site-packages/Briareus/config.py", line 29
    print config.host
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Briareus/patch.py'...
***   File "./lib/python3.5/site-packages/Briareus/patch.py", line 13
    print tree
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Briareus-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/Corellia'...
Listing './lib/python3.5/site-packages/Corellia/utils'...
Listing './lib/python3.5/site-packages/Corellia-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/Husky'...
Compiling './lib/python3.5/site-packages/Husky/generator_husky.py'...
***   File "./lib/python3.5/site-packages/Husky/generator_husky.py", line 9
    print g.next()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Husky/instance_husky.py'...
***   File "./lib/python3.5/site-packages/Husky/instance_husky.py", line 31
    print bytes
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Husky/module_husky.py'...
***   File "./lib/python3.5/site-packages/Husky/module_husky.py", line 36
    print l
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Husky/wrap.py'...
***   File "./lib/python3.5/site-packages/Husky/wrap.py", line 71
    print repr(b)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Husky-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
